# YadroImpulseTape

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: FileTape.h  TapeConfig.h  TapeSorter.h
include/entities/: FileTape.h  TapeConfig.h  TapeSorter.h  TapeSorter.hpp  TapeSorter.tpp
include/entities/fileTapes/: BinaryFileTape.h  TextFileTape.h
include/factories/: BuilerTapeConfigFactory.h  FileTapeConfigFactory.h  TapeConfigFactory.h
include/interfaces/: TapeConfigFactory.h  TapeConfigFactoryInterface.h  TapeInterface.h
include/utils/: utils.hpp
src/: FileTape.cpp  Tape.cpp  TapeConfig.cpp  TapeSorter.cpp  main.cpp
src/entities/: TapeSorter.cpp  TapeSorter.tpp
src/entities/fileTapes/: BinaryFileTape.cpp  TextFileTape.cpp
src/factories/: BuilderTapeConfigFactory.cpp  FileTapeConfigFactory.cpp  TapeConfigFactory.cpp
src/fileTapes/: BinaryFileTape.cpp  TextFileTape.cpp
src/utils/: utils.cpp  utils.hpp
tests/: BinaryFileTapeTest.cpp  CMakeLists.txt  TapeConfigFactoryTest.cpp  TapeSorterTest.cpp  UtilsTest.cpp  test_1.cpp
